--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       socket.on("connect", () => {
         console.log("connected");
       });
+
+      fetch("https://soket-node-production.up.railway.app/api/").then((res) => {
+        console.log(res);
+      });
     </script>
   </body>
 </html>
